# cancer-prediction-rkd43

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-and-publish.yml
cancer_prediction/: cancer_model.py  streamlit_app.py
tests/: test_CancerModel.py
